<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myPrescription">

    <TextView
        android:id="@+id/p_myPrescription"
        android:layout_width="289dp"
        android:layout_height="33dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/header_myPrescription"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/tv_m1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/tv_m1"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p_myPrescription" />

    <TextView
        android:id="@+id/tv_m2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/tv_m2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_m1" />

    <TextView
        android:id="@+id/tv_m3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/tv_m3"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_m2" />

    <TextView
        android:id="@+id/tv_m5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/tv_m5"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_m4"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/tv_m4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/tv_m4"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_m3" />

    <Button
        android:id="@+id/btn_viewP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="36dp"
        android:text="@string/btn_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_medi5"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_editP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/btn_editP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_deleteP"
        app:layout_constraintStart_toEndOf="@+id/btn_viewP"
        app:layout_constraintTop_toBottomOf="@+id/tv_medi5"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_deleteP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/btn_deleteP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_medi5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_medi1"
        android:layout_width="186dp"
        android:layout_height="31dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_m1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_m1" />

    <TextView
        android:id="@+id/tv_medi2"
        android:layout_width="186dp"
        android:layout_height="31dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_m2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_m2" />

    <TextView
        android:id="@+id/tv_medi3"
        android:layout_width="186dp"
        android:layout_height="31dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_m3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_m3" />

    <TextView
        android:id="@+id/tv_medi4"
        android:layout_width="186dp"
        android:layout_height="31dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_m4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_m4" />

    <TextView
        android:id="@+id/tv_medi5"
        android:layout_width="186dp"
        android:layout_height="31dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_m5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_m5" />

</androidx.constraintlayout.widget.ConstraintLayout>