<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="0dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="162dp"
        android:layout_height="170dp"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pres" />

    <TextView
        android:id="@+id/tv_pIntro1"
        android:layout_width="233dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_pintro1"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tv_pIntro2"
        android:layout_width="236dp"
        android:layout_height="63dp"
        android:fontFamily="@font/andada"
        android:text="@string/tv_pIntro2"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pIntro1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_myPrescription"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="184dp"
        android:layout_height="57dp"
        android:layout_marginBottom="88dp"
        android:text="@string/btn_myPrescription"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_addPrescription"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/purple_200" />

    <Button
        android:id="@+id/btn_addPrescription"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="184dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:text="@string/btn_addP"
        android:textColor="@color/cardview_dark_background"
        app:icon="@drawable/ic_addicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pIntro2"
        app:strokeColor="@color/purple_200" />

</androidx.constraintlayout.widget.ConstraintLayout>